[tool.poetry]
name = "buses"
version = "0.1.0"
description = "Scraping and analyzing bus traffic in Warsaw"
authors = ["Michał Mnich <mm448369@students.mimuw.edu.pl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
pandas = "^2.2.2"

folium = "^0.17.0"
plotly = "^5.22.0"
requests-mock = "^1.12.1"
geopy = "^2.4.1"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
run-analyzer = "buses.analyzer.run:main"
run-scraper = "buses.scraper.run:main"
